--- a/frontend/src/i18n/locales/ar.json
+++ b/frontend/src/i18n/locales/ar.json
@@ -239,6 +239,8 @@
     "size": "المقاس",
     "color": "اللون",
     "layers": "الطبقات",
-    "serial": "الرقم التسلسلي"
+    "serial": "الرقم التسلسلي",
+    "markAsDefective": "تحديد كمعيب",
+    "defectiveDescription": "حدد هذا المربع لتحديد جميع الباركود في هذه الدفعة كمعيبة (درجة ثانية). سيتم إضافة علامة 'معيب' عند الطباعة."
   }
 } 
