--- a/frontend/src/i18n/locales/ar.json
+++ b/frontend/src/i18n/locales/ar.json
@@ -51,8 +51,8 @@
     "dashboard": "لوحة التحكم",
     "barcodeScanner": "قارئ الباركود",
     "barcodeManagement": "إدارة الباركود",
-    "barcodeCreate": "إنشاء الباركود",
     "jobOrders": "أوامر العمل",
+    "barcodeCreate": "إنشاء الباركود",
     "archivedBatches": "الدفعات المؤرشفة",
     "advancedStatistics": "الإحصائيات المتقدمة",
     "userManagement": "إدارة المستخدمين",
@@ -81,6 +81,8 @@
     "batchNumber": "رقم الدفعة",
     "productName": "اسم المنتج",
     "quantity": "الكمية",
+    "workingQuantity": "كمية العمل",
+    "progress": "التقدم",
     "layers": "الطبقات",
     "serial": "الرقم التسلسلي",
     "brand": "العلامة التجارية",
@@ -165,7 +167,9 @@
     "failedToRecover": "فشل في استعادة الباركود المؤرشف. يرجى المحاولة مرة أخرى.",
     "confirmRecover": "هل أنت متأكد من أنك تريد استعادة هذا الباركود المؤرشف؟",
     "confirmDeleteArchived": "هل أنت متأكد من أنك تريد حذف هذا الباركود المؤرشف نهائياً؟",
-    "department": "قسم"
+    "department": "قسم",
+    "fullView": "عرض كامل",
+    "compactView": "عرض مضغوط"
   },
   "userManagement": {
     "title": "إدارة المستخدمين",
@@ -256,5 +260,64 @@
     "serial": "الرقم التسلسلي",
     "markAsDefective": "تحديد كمعيب",
     "defectiveDescription": "حدد هذا المربع لتحديد جميع الباركود في هذه الدفعة كمعيبة (درجة ثانية). سيتم إضافة علامة 'معيب' عند الطباعة."
+  },
+  "jobOrders": {
+    "title": "أوامر العمل",
+    "subtitle": "إدارة أوامر العمل وتتبع الإنتاج",
+    "addJobOrder": "إضافة أمر عمل",
+    "addNewJobOrder": "إضافة أمر عمل جديد",
+    "editJobOrder": "تعديل أمر العمل",
+    "jobOrderNumber": "رقم أمر العمل",
+    "modelName": "اسم الموديل",
+    "model": "الموديل",
+    "totalColors": "إجمالي الألوان",
+    "totalQuantity": "إجمالي الكمية",
+    "workingQuantity": "كمية العمل",
+    "completionPercentage": "نسبة الإنجاز %",
+    "status": "الحالة",
+    "open": "مفتوح",
+    "closed": "مغلق",
+    "closeJobOrder": "إغلاق أمر العمل",
+    "reopenJobOrder": "إعادة فتح أمر العمل",
+    "confirmClose": "هل أنت متأكد من أنك تريد إغلاق أمر العمل \"{jobOrderNumber}\"؟ سيتم تحديده كمكتمل.",
+    "confirmReopen": "هل أنت متأكد من أنك تريد إعادة فتح أمر العمل \"{jobOrderNumber}\"؟ سيتم تحديده كنشط مرة أخرى.",
+    "jobOrderItems": "عناصر أمر العمل",
+    "addItem": "إضافة عنصر",
+    "removeItem": "إزالة عنصر",
+    "item": "العنصر",
+    "color": "اللون",
+    "size": "المقاس",
+    "quantity": "الكمية",
+    "totalQuantityLabel": "إجمالي الكمية:",
+    "createJobOrder": "إنشاء أمر العمل",
+    "creating": "جاري الإنشاء...",
+    "jobOrderCreated": "تم إنشاء أمر العمل بنجاح",
+    "jobOrderUpdated": "تم تحديث أمر العمل بنجاح",
+    "failedToCreate": "فشل في إنشاء أمر العمل",
+    "failedToUpdate": "فشل في تحديث أمر العمل",
+    "validationErrors": {
+      "jobOrderNumberRequired": "رقم أمر العمل مطلوب",
+      "modelNameRequired": "اسم الموديل مطلوب",
+      "colorRequired": "اللون مطلوب للعنصر {itemNumber}",
+      "sizeRequired": "المقاس مطلوب للعنصر {itemNumber}",
+      "quantityRequired": "يجب أن تكون الكمية أكبر من 0 للعنصر {itemNumber}"
+    },
+    "filters": {
+      "jobOrderNumber": "رقم أمر العمل",
+      "modelName": "اسم الموديل"
+    },
+    "showingOpen": "عرض {count} من {total} أوامر عمل مفتوحة",
+    "showingClosed": "عرض {count} من {total} أوامر عمل مغلقة",
+    "loadClosedOrders": "تحميل أوامر العمل المغلقة",
+    "loadingClosed": "جاري تحميل أوامر العمل المغلقة...",
+    "noOpenOrders": "لم يتم العثور على أوامر عمل مفتوحة.",
+    "noClosedOrders": "لم يتم العثور على أوامر عمل مغلقة.",
+    "noOpenOrdersFiltered": "لا توجد أوامر عمل مفتوحة تطابق تصفيتك الحالية.",
+    "noClosedOrdersFiltered": "لا توجد أوامر عمل مغلقة تطابق تصفيتك الحالية.",
+    "loadingOpenOrders": "جاري تحميل أوامر العمل المفتوحة...",
+    "dropdown": {
+      "addNew": "إضافة \"{value}\"",
+      "noOptionsFound": "لم يتم العثور على خيارات."
+    }
   }
 } 
