--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -51,8 +51,8 @@
     "dashboard": "Dashboard",
     "barcodeScanner": "Barcode Scanner",
     "barcodeManagement": "Barcode Management",
-    "barcodeCreate": "Bulk Barcode Create",
     "jobOrders": "Job Orders",
+    "barcodeCreate": "Bulk Barcode Create",
     "archivedBatches": "Archived Batches",
     "advancedStatistics": "Advanced Statistics",
     "userManagement": "User Management",
@@ -81,6 +81,8 @@
     "batchNumber": "Batch Number",
     "productName": "Product Name",
     "quantity": "Quantity",
+    "workingQuantity": "Working Quantity",
+    "progress": "Progress",
     "layers": "Layers",
     "serial": "Serial",
     "brand": "Brand",
@@ -165,7 +167,9 @@
     "failedToRecover": "Failed to recover archived barcodes. Please try again.",
     "confirmRecover": "Are you sure you want to recover this archived barcode?",
     "confirmDeleteArchived": "Are you sure you want to permanently delete this archived barcode?",
-    "department": "department"
+    "department": "department",
+    "fullView": "Full View",
+    "compactView": "Compact View"
   },
   "userManagement": {
     "title": "User Management",
@@ -256,5 +260,64 @@
     "serial": "Serial",
     "markAsDefective": "Mark as Defective",
     "defectiveDescription": "Check this box to mark all barcodes in this batch as defective (second rate). This will add a 'DEFECT' label when printing."
+  },
+  "jobOrders": {
+    "title": "Job Orders",
+    "subtitle": "Manage job orders and production tracking",
+    "addJobOrder": "Add Job Order",
+    "addNewJobOrder": "Add New Job Order",
+    "editJobOrder": "Edit Job Order",
+    "jobOrderNumber": "Job Order Number",
+    "modelName": "Model Name",
+    "model": "Model",
+    "totalColors": "Total Colors",
+    "totalQuantity": "Total Quantity",
+    "workingQuantity": "Working Quantity",
+    "completionPercentage": "Completion %",
+    "status": "Status",
+    "open": "Open",
+    "closed": "Closed",
+    "closeJobOrder": "Close Job Order",
+    "reopenJobOrder": "Reopen Job Order",
+    "confirmClose": "Are you sure you want to close job order \"{jobOrderNumber}\"? This will mark it as completed.",
+    "confirmReopen": "Are you sure you want to reopen job order \"{jobOrderNumber}\"? This will mark it as active again.",
+    "jobOrderItems": "Job Order Items",
+    "addItem": "Add Item",
+    "removeItem": "Remove Item",
+    "item": "Item",
+    "color": "Color",
+    "size": "Size",
+    "quantity": "Quantity",
+    "totalQuantityLabel": "Total Quantity:",
+    "createJobOrder": "Create Job Order",
+    "creating": "Creating...",
+    "jobOrderCreated": "Job order created successfully",
+    "jobOrderUpdated": "Job order updated successfully",
+    "failedToCreate": "Failed to create job order",
+    "failedToUpdate": "Failed to update job order",
+    "validationErrors": {
+      "jobOrderNumberRequired": "Job order number is required",
+      "modelNameRequired": "Model name is required",
+      "colorRequired": "Color is required for item {itemNumber}",
+      "sizeRequired": "Size is required for item {itemNumber}",
+      "quantityRequired": "Quantity must be greater than 0 for item {itemNumber}"
+    },
+    "filters": {
+      "jobOrderNumber": "Job Order Number",
+      "modelName": "Model Name"
+    },
+    "showingOpen": "Showing {count} of {total} open job orders",
+    "showingClosed": "Showing {count} of {total} closed job orders",
+    "loadClosedOrders": "Load Closed Orders",
+    "loadingClosed": "Loading closed job orders...",
+    "noOpenOrders": "No open job orders found.",
+    "noClosedOrders": "No closed job orders found.",
+    "noOpenOrdersFiltered": "No open job orders match your current filters.",
+    "noClosedOrdersFiltered": "No closed job orders match your current filters.",
+    "loadingOpenOrders": "Loading open job orders...",
+    "dropdown": {
+      "addNew": "Add \"{value}\"",
+      "noOptionsFound": "No options found."
+    }
   }
 } 
